<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="app_name">Beer Me!™ mobile (free)</string>
    <string name="daidalos_hello">Hello World!</string>
    <string name="daidalos_app_name">aFileDialog</string>
    <string name="daidalos_select">Select</string>
    <string name="daidalos_cancel">Cancel</string>
    <string name="daidalos_ok">OK</string>
    <string name="daidalos_new_file">New</string>
    <string name="daidalos_create_file">Create file</string>
    <string name="daidalos_create_folder">Create folder</string>
    <string name="daidalos_accept">Accept</string>
    <string name="daidalos_enter_file_name">Enter the name of the file that you want to create</string>
    <string name="daidalos_enter_folder_name">Enter the name of the folder that you want to create</string>
    <string name="daidalos_yes">Yes</string>
    <string name="daidalos_no">No</string>
    <string name="daidalos_confirm_select_file">"Are you sure that you want to select the file '$file_name'?"</string>
    <string name="daidalos_confirm_create_file">"The file '$file_name' do not exists, are you sure that you want to create it?"</string>
    <string name="daidalos_confirm_select_folder">"Are you sure that you want to select the folder '$file_name'?"</string>
    <string name="daidalos_confirm_create_folder">"The folder '$file_name' do not exists, are you sure that you want to create it?"</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="ga_trackingId">UA-11700291-2</string>
    <string name="com.beerme.android_free.ui.BeerActivity">BeerActivity</string>
    <string name="com.beerme.android_free.ui.BeerMeMapActivity">BeerMeMapActivity</string>
    <string name="com.beerme.android_free.ui.BreweryActivity">BreweryActivity</string>
    <string name="com.beerme.android_free.ui.BreweryListActivity">BreweryListActivity</string>
    <string name="com.beerme.android_free.ui.MainActivity">MainActivity</string>
    <string name="com.beerme.android_free.ui.Splash">Splash</string>
    <string name="About">About / Contact</string>
    <string name="about_translationGerman">German translation: Mario Kornmesser, Matthias Krümberg</string>
    <string name="action_clear_map">Clear map</string>
    <string name="action_directions">Directions</string>
    <string name="action_load">Load trip</string>
    <string name="action_save">Save trip</string>
    <string name="action_settings">Settings</string>
    <string name="action_zoom_to_route">Zoom to route</string>
    <string name="Add_a_brewery">Add a brewery</string>
    <string name="Add_a_note">Add a note</string>
    <string name="Add_to_route">Add to route</string>
    <string name="Analyzing_route">Analyzing route</string>
    <string name="Appearance">Appearance</string>
    <string name="Application_error">Application error: %d</string>
    <string name="App_not_licensed">This application is not licensed.</string>
    <string name="Aroma">Aroma</string>
    <string name="Bar">Bar / Tasting Room</string>
    <string name="Beer_details">Beer details</string>
    <string name="Beer_garden">Beer Garden / Outdoor Seating</string>
    <string name="beer_image">beer image</string>
    <string name="Beer_list">Beer List</string>
    <string name="Beerme_notes">Beer Me! notes</string>
    <string name="beernote_appearance_hint">"Notes on the beer's appearance"</string>
    <string name="beernote_aroma_hint">"Notes on the beer's aroma"</string>
    <string name="Beer_note">Beer note</string>
    <string name="Brewery_notes">Brewery notes</string>
    <string name="Call">Call</string>
    <string name="Cancel">Cancel</string>
    <string name="Database">Database</string>
    <string name="fixError1">Submitting this form will send the information to Beer Me!™. It may take several days for the information to appear in the database.</string>
    <string name="fixError2">Please do not use this form to try to contact a brewery.</string>
    <string name="fixError3">Thanks for your help!</string>
    <string name="fixErrorAddress">Address</string>
    <string name="fixErrorAddressHint">Including city, state, postal code, country</string>
    <string name="fixErrorComments">Comments</string>
    <string name="fixErrorCommentsHint">Add information about the beers, or any other comments you may have.</string>
    <string name="fixErrorHoursHint">When is this location open to the public?</string>
    <string name="fixErrorHours">Hours of Operation</string>
    <string name="fixErrorNameHint">Name of the brewery</string>
    <string name="fixErrorName">Name</string>
    <string name="fixErrorOpenPublic">Open to the Public?</string>
    <string name="fixErrorPhoneHint">"Brewery's telephone number"</string>
    <string name="fixErrorPhone">Telephone</string>
    <string name="fixErrorStatusHint">Select a status</string>
    <string name="fixErrorStatus">Status</string>
    <string name="fixErrorWebHint">http://</string>
    <string name="fixErrorWeb">Web Site</string>
    <string name="Food">Food</string>
    <string name="Gift_shop">Retail Items (Shirts, hats, glassware, etc.)</string>
    <string name="helpBeerNoteCancel">Discard your note.</string>
    <string name="helpBeerNoteMain">Tap on the various fields to complete the form. Be sure to add ratings by tapping on the numbers in the column on the right.</string>
    <string name="helpBeerNoteSave">Save your note.</string>
    <string name="helpBeerNoteTitle">Help: Beer note</string>
    <string name="helpBreweryAddNote">Add your own notes about this brewery.</string>
    <string name="helpBreweryBeerList">Tap on a beer in the list for more information.</string>
    <string name="helpBreweryCall">Call the brewery.</string>
    <string name="helpBreweryHours">If the brewery is open to the public, the hours will be displayed here.</string>
    <string name="helpBreweryMap">Show the brewery on a map.</string>
    <string name="helpBreweryNotes">View your notes on this brewery. Press and hold a note to edit or delete it.</string>
    <string name="helpBreweryTitle">Help: Brewery</string>
    <string name="helpBreweryUpdate">Send updated brewery information to beerme.com</string>
    <string name="helpBreweryWeb">"View the brewery's website."</string>
    <string name="Help">Help</string>
    <string name="helpMainAbout">Information about the app.</string>
    <string name="helpMainDatabase">Refresh, save, or reload your database.</string>
    <string name="helpMainHelp">Access help for the current task.</string>
    <string name="helpMainNearby">A map (or list) showing breweries within 100km of your location. Tap on a brewery for more information.</string>
    <string name="helpMainNews">A list of recent brewery news articles.</string>
    <string name="helpMainSearch">Search for breweries, beers, and locales.</string>
    <string name="helpMainSettings">"Change the app's settings."</string>
    <string name="helpMainTitle">Help: Main</string>
    <string name="helpMainTripPlanner">Specify a route, and get directions to the breweries along the way.</string>
    <string name="helpMainUpdate">Notify beerme.com of new breweries.</string>
    <string name="helpMainUpdates">A list of breweries that have recently had their information updated.</string>
    <string name="Hotel">Hotel Rooms</string>
    <string name="Hours">Hours</string>
    <string name="Internet">Internet Access</string>
    <string name="Map">Map</string>
    <string name="MenuOptions">Menu Options</string>
    <string name="Nearby_breweries">Nearby breweries</string>
    <string name="News">News</string>
    <string name="Retail">Beer to Go / Off-License Sales</string>
    <string name="Save">Save</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Tabs">Tabs</string>
    <string name="Tours">Tours</string>
    <string name="Trip_Planner">Trip Planner</string>
    <string name="Updates">Updates</string>
    <string name="Update">Update</string>
    <string name="Web">Web</string>
</resources>