<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixError1" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="italic" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixError2" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixError3" />
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorName" />
        <EditText android:id="@id/fixerror_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorNameHint" />
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorAddress" />
        <EditText android:id="@id/fixerror_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorAddressHint" />
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorPhone" />
        <EditText android:id="@id/fixerror_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorPhoneHint" android:inputType="phone" />
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorStatus" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/fixerror_status" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorStatusHint" />
        <CheckBox android:id="@id/fixerror_openPublic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/fixErrorOpenPublic" />
        <LinearLayout android:orientation="vertical" android:id="@id/fixerror_open_details" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorHours" />
            <EditText android:id="@id/fixerror_hours" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorHoursHint" />
            <CheckBox android:id="@id/fixerror_bar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Bar" />
            <CheckBox android:id="@id/fixerror_beergarden" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Beer_garden" />
            <CheckBox android:id="@id/fixerror_food" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Food" />
            <CheckBox android:id="@id/fixerror_giftshop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Gift_shop" />
            <CheckBox android:id="@id/fixerror_hotel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Hotel" />
            <CheckBox android:id="@id/fixerror_retail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Retail" />
            <CheckBox android:id="@id/fixerror_tours" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Tours" />
            <CheckBox android:id="@id/fixerror_internet" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Internet" />
        </LinearLayout>
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorWeb" />
        <EditText android:id="@id/fixerror_web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorWebHint" />
        <TextView android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fixErrorComments" />
        <EditText android:id="@id/fixerror_comments" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/fixErrorCommentsHint" />
    </LinearLayout>
</ScrollView>