<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/beerme_background" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/helpBreweryTitle" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/Tabs" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Hours" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryHours" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Beer_list" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryBeerList" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Brewery_notes" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryNotes" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:gravity="center" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/MenuOptions" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_search" android:contentDescription="@string/Search" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainSearch" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/location_map" android:contentDescription="@string/Map" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryMap" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/content_new" android:contentDescription="@string/Add_a_note" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryAddNote" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/device_access_call" android:contentDescription="@string/Call" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryCall" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/location_web_site" android:contentDescription="@string/Web" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryWeb" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/content_edit" android:contentDescription="@string/Update" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpBreweryUpdate" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Database" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainDatabase" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/About" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainAbout" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Settings" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainSettings" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Help" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainHelp" />
        </TableRow>
    </TableLayout>
</ScrollView>