<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/beerme_background" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="1">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/helpMainTitle" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:gravity="left" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/Tabs" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Nearby_breweries" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainNearby" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/News" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainNews" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Updates" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainUpdates" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Trip_Planner" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainTripPlanner" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_span="2" android:text="@string/MenuOptions" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_action_search" android:contentDescription="@string/Search" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainSearch" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/content_edit" android:contentDescription="@string/Update" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainUpdate" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Database" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainDatabase" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/About" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainAbout" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Settings" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainSettings" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Help" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/helpMainHelp" />
        </TableRow>
    </TableLayout>
</ScrollView>